z-index ios fix

--- a/client/src/components/homePage/auth/homePageAuth.scss
+++ b/client/src/components/homePage/auth/homePageAuth.scss
@@ -1,5 +1,5 @@
 .borderAuthHomeWrapper {
-  z-index: 1500;
+  z-index: 990;
   position: absolute;
   top: 20%;
   width: 100%;
